fixed the background gradient clipping at the bottem

--- a/styles2.css
+++ b/styles2.css
@@ -1,16 +1,23 @@
 /*Start - general formatting*/
 html{
     box-sizing: border-box;
+    
 }
 *, *:before, *:after{
     box-sizing: inherit;
 }
 
 body{
+    min-height:100vh;
     font-family: sans-serif;
     color:#2b2e34;
     margin: 5;
-    background-image: linear-gradient(260deg, rgb(255, 255, 255) 0%, white 100%);
+    background-image: linear-gradient(240deg, #2e2d2c 0%, #f0f0f0 50%);
+}
+
+.wrapper {
+    max-width: 1000px;
+    margin: 0 auto;
 }
 
 a {
@@ -43,11 +50,6 @@ button {
     background: #2e2d2c;
 }
 
-/*.profile-photo{
-    height:252px;
-    width:180px;
-}*/
-
 .social img{
     width: 32px;
     height: 32px;
@@ -64,11 +66,6 @@ button {
     border-radius: 3%;
     box-shadow: 3px 3px 2px 2px #666666;
     float: right;
-}
-
-.wrapper {
-    max-width: 1000px;
-    margin: 0 auto;
 }
 
 main {
